--- a/docker/prod-centinela/www.conf
+++ b/docker/prod-centinela/www.conf
@@ -16,13 +16,11 @@ pm.max_requests = 500
 
 request_terminate_timeout = 300
 request_slowlog_timeout = 5s
-slowlog = /var/log/php-fpm/slowlog.log
 
 pm.process_idle_timeout = 300s
-pm.max_spawn_rate = 32
 
 rlimit_files = 131072
 rlimit_core = unlimited
 
-access.log = /var/log/php-fpm/$pool.access.log
-access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
+slowlog = /proc/self/fd/2
+access.log = /proc/self/fd/2
